# fig-lite

./: .gitattributes  .gitignore  .lintstagedrc.mjs  .typos.toml  Cargo.toml  Cross.toml  Dockerfile.build  README.md  build.sh  codebase-summary.md  docker-compose.build.yml  feed-schema.json  feed.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  typos.toml
.github/ISSUE_TEMPLATE/: 1_bug_report_template.yml
build-config/: buildspec-linux-minimal.yml  buildspec-linux-ubuntu.yml
build-scripts/: build.py  const.py  main.py  manifest.py  rust.py  util.py
bundle/deb/: control  control_minimal
bundle/linux/: README  install.sh
crates/alacritty_terminal/src/: ansi.rs
crates/amzn-codewhisperer-client/src/: client.rs  error_meta.rs  operation.rs  protocol_serde.rs  (+1 more)
crates/fig_api_client/: Cargo.toml
crates/fig_auth/: Cargo.toml
crates/fig_dbus/: Cargo.toml
crates/fig_desktop/: Cargo.toml  README.md  tauri.conf.json
crates/fig_desktop_api/: Cargo.toml
crates/fig_install/: Cargo.toml
crates/fig_integrations/: Cargo.toml
crates/fig_proto/: Cargo.toml
crates/fig_remote_ipc/: Cargo.toml
crates/fig_request/: Cargo.toml
crates/fig_request/src/: error.rs  lib.rs  reqwest_client.rs
crates/fig_util/: Cargo.toml
crates/figterm/: Cargo.toml  README.md
crates/macos-utils/: Cargo.toml
crates/q_cli/: Cargo.toml
extensions/gnome-extension/: .gitignore  README.md  package.json
extensions/vscode/: README.md  extension.js  package.json
proto/: fig.proto  fig_common.proto  figterm.proto  local.proto
scripts/: install.sh  setup.sh
(+138 files in other folders)
