[package]
name = "fig_request"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
fig_os_shim.workspace = true
fig_settings.workspace = true
fig_util.workspace = true
reqwest.workspace = true
rustls-native-certs.workspace = true
rustls-pemfile = "2.1.0"
rustls.workspace = true
serde_json.workspace = true
tracing.workspace = true
url.workspace = true
webpki-roots.workspace = true

[dev-dependencies]
mockito = "1.7.0"
tokio.workspace = true
